--- a/.github/workflows/cartTests.yml
+++ b/.github/workflows/cartTests.yml
@@ -1,9 +1,6 @@
-name: Playwright Tests
+name: Cart Tests
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch: {}
 jobs:
   test:
     timeout-minutes: 60
@@ -18,10 +15,10 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test
+      run:  npx playwright test --grep @cart
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
-        retention-days: 3
+        retention-days: 5
