--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ on:
       description: "Name"
       type: string
       default: "test"
-      
+
      age:
       description: "Age"
       type: number
@@ -18,6 +18,11 @@ on:
        options:
         - Male
         - Female
+
+     married:
+        description: "Is Married?"
+        type: boolean
+
 
 jobs:
   manual:
@@ -32,3 +37,6 @@ jobs:
 
       - name: Gender
         run: echo "${{ inputs.gender }}"
+
+      - name: Married
+        run: echo "${{ inputs.married }}"
