--- a/.github/workflows/inventoryTests.yml
+++ b/.github/workflows/inventoryTests.yml
@@ -1,6 +1,8 @@
 name: Inventory Tests
 on:
   workflow_dispatch: {}
+  schedule:
+    - cron: "45 9,11,14 * 7-8 1-5"
 jobs:
   test:
     timeout-minutes: 60
