--- a/.github/workflows/mainUltimate tests.yml
+++ b/.github/workflows/mainUltimate tests.yml
@@ -1,6 +1,8 @@
 name: MainUltimate Tests
 on:
   workflow_dispatch: {}
+  schedule:
+    - cron: "45 9,11,14 * 7-8 1-5"
 jobs:
   test:
     timeout-minutes: 60
