--- a/.github/workflows/choosePage.yml
+++ b/.github/workflows/choosePage.yml
@@ -29,6 +29,13 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 3
+
       - name: Run Playwright tests for selected page
         run: |
           echo "Testing page: ${{ github.event.inputs.page }}"
