--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,9 +2,9 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
 
 jobs:
   security-scan:
@@ -35,12 +35,14 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
+      
+      - name: Run Playwright smoke tests with retry
+        run: npx playwright test --grep @smoke --project=chromium
+      
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: playwright-report/
           retention-days: 3
-      - name: Run Playwright smoke tests with retry
-        run: npx playwright test --grep @smoke --project=chromium
        
