added telegram notifier

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,4 +42,16 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 3
-       
+
+  notifyTelegram:
+    runs-on: ubuntu-latest
+    steps:
+    - name: send custom message
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: |
+          The ${{ github.event_name }} event triggered final step.
+          echo This event is a pull request that had an assignee removed.
+      
