--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -54,8 +54,8 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          The ${{ github.event_name }} event triggered final step.
-          echo This event is a pull request that had an assignee removed.
+           The ${{ github.event_name }} event triggered final step.
+           This event is a pull request that had an assignee removed.
 
     - uses: actions/checkout@master
     - name: send photo message
