--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -1,10 +1,9 @@
-name: Playwright Tests
+name: Reporting Tests
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_dispatch: {}
+  schedule:
+    - cron: "45 9,11,14 * 7-8 1-5"
 
 jobs:
   security-scan:
@@ -48,7 +47,6 @@ jobs:
           name: all-blob-reports
           path: blob-report
           retention-days: 14
-
 
   merge-reports-and-upload:
     # Merge reports after playwright tests, even if some shards have failed
