--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -108,5 +108,5 @@ jobs:
           message: |
             New commit by ${{ github.actor }}
             Repository: ${{ github.repository }}
-            Link: "https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/"
+            Link: https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/
  
