--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -106,7 +106,8 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           to: ${{ secrets.TELEGRAM_TO }}
           message: |
-            New commit by ${{ github.actor }}
+            New commit by ${{ github.actor }}!
+            Commit: ${{ github.event}}
             Repository: ${{ github.repository }}
             Link: https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/
  
