--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -107,7 +107,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           message: |
             New commit by ${{ github.actor }}!
-            Commit: ${{ github.event}}
+            Commit: ${{ github.workflow}}
             Repository: ${{ github.repository }}
             Link: https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/
  
