--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -105,9 +105,10 @@ jobs:
         with:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           to: ${{ secrets.TELEGRAM_TO }}
+          parse-mode: MarkdownV2
           message: |
             New commit by ${{ github.actor }}!
             Commit: ${{ github.workflow}}
             Repository: ${{ github.repository }}
-            Link: https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/ppp
+            Link: https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/
  
