--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -107,8 +107,9 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           parse-mode: MarkdownV2
           message: |
-            New commit by ${{ github.actor }}!
-            Commit: ${{ github.workflow}}
-            Repository: ${{ github.repository }}
-            Link: https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/
+            New commit by ${{ github.actor }}\!
+            Commit\: ${{ github.workflow }}
+            Repository\: ${{ github.repository }}
+            Link\: https\:\/\/${{ github.repository_owner }}\.github\.io\/Project\-2\/${{ steps.timestampid.outputs.timestamp }}\/
+
  
