--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -105,7 +105,7 @@ jobs:
         with:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           to: ${{ secrets.TELEGRAM_TO }}
-          parse-mode: MarkdownV2
+          parse-mode: Markdown
           message: |
             New commit by ${{ github.actor }}\!
             Commit\: ${{ github.workflow }}
