--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -107,10 +107,9 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           parse-mode: html
           message: |
-            <b>New commit by:</b> <code>${{ github.actor }}</code><br>
-            <b>Commit:</b> <code>${{ github.workflow }}</code><br>
-            <b>Repository:</b> <code>${{ github.repository }}</code><br>
-            <b>Link:</b> https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/
-
+            New commit by ${{ github.actor }}\
+            Commit: ${{ github.workflow }}
+            Repository: ${{ github.repository }}
+            Link: https: ${{ github.repository_owner }}\.github\.io\/Project\-2\/${{ steps.timestampid.outputs.timestamp }}
 
  
