--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -110,7 +110,7 @@ jobs:
             <b>New commit by:</b> <code>${{ github.actor }}</code><br>
             <b>Commit:</b> <code>${{ github.workflow }}</code><br>
             <b>Repository:</b> <code>${{ github.repository }}</code><br>
-            <b>Link:</b> https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/
+            <b>Link:</b> https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}
 
 
  
