--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -129,7 +129,7 @@ jobs:
                   "url": "https://github.com/${{ github.actor }}",
                   "icon_url": "https://avatars.githubusercontent.com/u/${{ github.actor }}?v=4"
                 },
-                "url": "https://github.com/REPO_OWNER/REPO_NAME"
+                "url": "https://github.com/otiliamadalina/Project-2.git"
               }
             ]
           }' "${{ secrets.WEBHOOK_URL }}")
