--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -118,8 +118,8 @@ jobs:
             "embeds": [
               {
                 "type": "rich",
-                "title": "New Changes",
-                "description": "New changes on DroneGPS repository by ${{ github.actor }}",
+                "title": "🔧 CI/CD Notification",
+                "description": "🚀 New commit by **'"$ACTOR"'**\n📂 Repository: **'"$REPO"'**\n🔗 Report: https://otiliamadalina.github.io/Project-2/",
                 "color": 2123412,
                 "thumbnail": {
                   "url": "https://avatars.githubusercontent.com/u/160980408?v=4"
