fixed some names&added cart tag

--- a/.github/workflows/choosePage.yml
+++ b/.github/workflows/choosePage.yml
@@ -16,7 +16,7 @@ on:
 
 
 jobs:
-  test:
+  run-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -51,7 +51,7 @@ jobs:
   merge-reports-and-upload:
     # Merge reports after playwright tests, even if some shards have failed
     if: always()
-    needs: [test]
+    needs: [run-tests]
     runs-on: ubuntu-latest
     outputs:
       timestamp: ${{ steps.timestampid.outputs.timestamp }}
