--- a/.github/workflows/choosePage.yml
+++ b/.github/workflows/choosePage.yml
@@ -128,7 +128,7 @@ jobs:
              📂 Repository: ${{ github.repository }}
              🔗 Report: https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}
              🕒 Time: ${{ steps.moldova_time.outputs.timestamp }}
-                 Status: ${{ steps.test-status.outputs.STATUS }}
+             📌 Status: ${{ steps.test-status.outputs.STATUS }}
 
 
 
@@ -142,7 +142,7 @@ jobs:
               {
                 "type": "rich",
                 "title": "🚀 New commit by: ${{ github.actor }}",
-                "description": "**📂 Repository:** ${{ github.repository }}\n**🔗 Report:** https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}\n**🕒 Time:** ${{ steps.moldova_time.outputs.timestamp }}\n** Status:** ${{ steps.test-status.outputs.STATUS }}",
+                "description": "**📂 Repository:** ${{ github.repository }}\n**🔗 Report:** https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}\n**🕒 Time:** ${{ steps.moldova_time.outputs.timestamp }}\n**📌 Status:** ${{ steps.test-status.outputs.STATUS }}",
                 "color": 2123412,
                 "author": {
                   "name": "${{ github.actor }}",
