--- a/.github/workflows/invalidDate.yml
+++ b/.github/workflows/invalidDate.yml
@@ -19,18 +19,17 @@ jobs:
   set-time-stamps:
     runs-on: ubuntu-latest
     outputs:
-      timestamp: ${{ steps.timestampid.outputs.timestamp }}
+      time-stamp: ${{ steps.time-stamp-id.outputs.timestamp }}
+      moldova-time: ${{ steps.moldova-time-id.outputs.timestamp }} 
 
     steps:
-      # We want a unique identifier to be used when we create subdirectories for our github pages with reports
       - name: Set a timestamp
-        id: timestampid
-        # this will store current time with UTC in outputs.timestamp (eg of value: 20231028_233147Z)
+        id: time-stamp-id
         run: echo "timestamp=$(date --utc +%Y%m%d_%H%M%SZ)" >> "$GITHUB_OUTPUT"
-      - name: Get Moldova timestamp
-        id: moldova_time
-        run: echo "timestamp=$(TZ='Europe/Chisinau' date '+%Y-%m-%d %H:%M:%S %Z')" >> "$GITHUB_OUTPUT"
 
+      - name: Get Moldova timestamp
+        id: moldova-time-id
+        run: echo "timestamp=$(TZ='Europe/Chisinau' date '+%Y-%m-%d %H:%M:%S %Z')" >> "$GITHUB_OUTPUT"
 
   run-playwright-tests:
     runs-on: ubuntu-latest
@@ -49,8 +48,6 @@ jobs:
         run: npx playwright install --with-deps
 
      
-
-
       - name: Run Playwright tests for selected page
         run: |
           echo "Testing page: ${{ github.event.inputs.page }}"
@@ -68,7 +65,7 @@ jobs:
   merge-reports-and-upload:
     # Merge reports after playwright tests, even if some shards have failed
     if: always()
-    needs: [run-playwright-tests]
+    needs: [run-playwright-tests, set-time-stamps]
     runs-on: ubuntu-latest
 
     steps:
@@ -94,7 +91,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report-${{ needs.set-time-stamps.outputs.timestamp }}
+          name: playwright-report-${{ needs.set-time-stamps.outputs.time-stamp }}
           path: playwright-report
           retention-days: 14
 
@@ -105,24 +102,17 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./playwright-report # from what folder to take files. It takes only contents
-          destination_dir: ${{ steps.timestampid.outputs.timestamp }} # a sub-directory where to publish to avoid overwriting other reports
+          destination_dir: ${{ needs.set-time-stamps.outputs.time-stamp }} # a sub-directory where to publish to avoid overwriting other reports
 
       - name: Write URL in summary
-        run: echo "### Test results (link available after 20 secs) - https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}/" >> $GITHUB_STEP_SUMMARY
-
-
-
-
-
-
+        run: echo "### Test results (link available after 20 secs) - https://${{ github.repository_owner }}.github.io/Project-2/${{ needs.set-time-stamps.outputs.time-stamp }}/" >> $GITHUB_STEP_SUMMARY
 
   send-message-to-chats:
     if: always()
-    needs: [run-playwright-tests]
+    needs: [run-playwright-tests, set-time-stamps]
     runs-on: ubuntu-latest
+
     steps:
-      
-      
 
       - name: Send Inline Telegram Message
         uses: appleboy/telegram-action@master
@@ -132,8 +122,8 @@ jobs:
            message: |
              🚀 New commit by: ${{ github.actor }}
              📂 Repository: ${{ github.repository }}
-             🔗 Report: https://${{ github.repository_owner }}.github.io/Project-2/${{ needs.set-time-stamps.outputs.timestamp }}
-             🕒 Time: ${{ needs.set-time-stamps.outputs.moldova_time }}
+             🔗 Report: https://${{ github.repository_owner }}.github.io/Project-2/${{ needs.set-time-stamps.outputs.time-stamp }}
+             🕒 Time: ${{ needs.set-time-stamps.outputs.moldova-time }}
 
       - name: Send a request to webhook
         run: |
@@ -144,7 +134,7 @@ jobs:
               {
                 "type": "rich",
                 "title": "🚀 New commit by: ${{ github.actor }}",
-                "description": "**📂 Repository:** ${{ github.repository }}\n**🔗 Raport:** https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}\n**🕒 Time:** ${{ steps.moldova_time.outputs.timestamp }}",
+                "description": "**📂 Repository:** ${{ github.repository }}\n**🔗 Raport:** https://${{ github.repository_owner }}.github.io/Project-2/${{ needs.set-time-stamps.outputs.time-stamp }}\n**🕒 Time:** ${{ needs.set-time-stamps.outputs.moldova-time }}",
                 "color": 2123412,
                 "author": {
                   "name": "${{ github.actor }}",
