--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -118,6 +118,17 @@ jobs:
               echo "COLOR=#808080" >> "$GITHUB_OUTPUT"
               fi
 
+      - name: Set trigger type
+        id: trigger
+        run: |
+           if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+           echo "trigger=manual" >> "$GITHUB_OUTPUT"
+           elif [ "${{ github.event_name }}" == "schedule" ]; then
+           echo "trigger=scheduled" >> "$GITHUB_OUTPUT"
+            else
+           echo "trigger=unknown" >> "$GITHUB_OUTPUT"
+           fi
+
       - name: Send Inline Telegram Message
         uses: appleboy/telegram-action@master
         with:
@@ -125,27 +136,30 @@ jobs:
            token: ${{ secrets.TELEGRAM_TOKEN }}
            message: |
              🚀 New commit by: ${{ github.actor }}
+             🔍 Trigger: ${{ steps.trigger.outputs.trigger }}
              📂 Repository: ${{ github.repository }}
              🔗 Report: https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}
              🕒 Time: ${{ steps.moldova_time.outputs.timestamp }}
+             📌 Status: ${{ steps.test-status.outputs.STATUS }}
+             
 
-      - name: Send a request to webhook
-        run: |
-          RESPONSE=$(curl -H "Content-Type: application/json" -X POST -d '{
-            "username": "GitHub",
-            "content": "@everyone",
-            "embeds": [
-              {
-                "type": "rich",
-                "title": "🚀 New commit by: ${{ github.actor }}",
-                "description": "**📂 Repository:** ${{ github.repository }}\n**🔗 Raport:** https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}\n**🕒 Time:** ${{ steps.moldova_time.outputs.timestamp }}",
-                "color": 2123412,
-                "author": {
-                  "name": "${{ github.actor }}",
-                  "url": "https://github.com/${{ github.actor }}",
-                  "icon_url": "https://avatars.githubusercontent.com/u/${{ github.actor }}?v=4"
-                }
-              }
-            ]
-          }' "${{ secrets.WEBHOOK_URL }}")
-          echo "Webhook server response: $RESPONSE"
+      # - name: Send a request to webhook
+      #   run: |
+      #     RESPONSE=$(curl -H "Content-Type: application/json" -X POST -d '{
+      #       "username": "GitHub",
+      #       "content": "@everyone",
+      #       "embeds": [
+      #         {
+      #           "type": "rich",
+      #           "title": "🚀 New commit by: ${{ github.actor }}",
+      #           "description": "**📂 Repository:** ${{ github.repository }}\n**🔗 Raport:** https://${{ github.repository_owner }}.github.io/Project-2/${{ steps.timestampid.outputs.timestamp }}\n**🕒 Time:** ${{ steps.moldova_time.outputs.timestamp }}",
+      #           "color": 2123412,
+      #           "author": {
+      #             "name": "${{ github.actor }}",
+      #             "url": "https://github.com/${{ github.actor }}",
+      #             "icon_url": "https://avatars.githubusercontent.com/u/${{ github.actor }}?v=4"
+      #           }
+      #         }
+      #       ]
+      #     }' "${{ secrets.WEBHOOK_URL }}")
+      #     echo "Webhook server response: $RESPONSE"
